--- a/test3.yaml
+++ b/test3.yaml
@@ -41,13 +41,13 @@
         filename: kubernetes.list
         update_cache: yes     
 
-    - name: Ensure swap file doesn't exist (if configured).
-      file:
-        path: "{{ swap_file_path }}"
-        state: absent
-
-    - name: Disable swap (if configured).
-      command: swapoff -a
+     - name: disable swap
+       shell: |
+               sudo swapoff -a
+               sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+       become: yes
+       become_method: sudo
+       become_user: root
 
     - name: Add CRI-O GPG key
       apt_key:
