--- a/test3.yaml
+++ b/test3.yaml
@@ -4,7 +4,7 @@
   become: true
   vars:
     k8s_version: "1.26.1-00"
-    crio_version: "1.21.0"
+    crio_version: "1.26.0"
   tasks:
     - name: Update apt cache
       apt:
@@ -54,13 +54,13 @@
         url: https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/Release.key
         state: present
 
-    - name: Add CRI-O apt repository
+    - name: Add CRI-O repository
       apt_repository:
-        repo: deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/ /
+        repo: 'deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_{{ ansible_distribution_release }}/ /'
+        keyserver: hkp://keyserver.ubuntu.com:80
         state: present
-        filename: cri-o.list
-        update_cache: yes
-
+    
+    
     - name: Install Kubernetes components
       apt:
         name: "{{ item }}"
