--- a/test3.yaml
+++ b/test3.yaml
@@ -1,104 +1,78 @@
----
 - name: Install Kubernetes with CRI-O
   hosts: all
-  become: true
-  vars:
-    k8s_version: "1.26.1-00"
-    crio_version: "1.26.0"
-  tasks:
-    - name: Update apt cache
-      apt:
-        update_cache: yes
+  become: yes
 
-    - name: Install packages required for Kubernetes and CRI-O
+  tasks:
+    - name: Disable swap
+      sysctl:
+        name: vm.swappiness
+        value: 0
+        state: present
+
+    - name: Unmount swap
+      mount:
+        name: swap
+        fstype: swap
+        state: absent
+
+    - name: Remove swap entry from /etc/fstab
+      lineinfile:
+        path: /etc/fstab
+        regexp: '^/dev/mapper/ubuntu--vg-swap_1'
+        state: absent
+
+    - name: Install CRI-O dependencies
       apt:
         name: "{{ item }}"
         state: present
-        update_cache: yes
-      loop:
+      with_items:
+        - software-properties-common
         - apt-transport-https
         - ca-certificates
         - curl
-        - software-properties-common
-        - gnupg-agent
 
-    - name: Add Kubernetes GPG key
+    - name: Add CRI-O repository key
       apt_key:
-        url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-        state: present
-
-    - name: Add Kubernetes apt repository
-      apt_repository:
-        repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
-        state: present
-        filename: kubernetes.list
-        update_cache: yes
-        
-    - name: Add Kubernetes apt repository
-      apt_repository:
-        repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
-        state: present
-        filename: kubernetes.list
-        update_cache: yes     
-
-    - name: disable swap
-      shell: |
-             sudo swapoff -a
-             sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
-      become: yes
-      become_method: sudo
-      become_user: root
+        url: https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_$(lsb_release -rs)/Release.key
 
     - name: Add CRI-O repository
       apt_repository:
-        repo: 'deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_{{ ansible_distribution_release }}/ /'
-        keyserver: hkp://keyserver.ubuntu.com:80
+        repo: deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_$(lsb_release -rs)/ /
         state: present
-
-    - name: Install CRI-O package
-      apt:
-        name: cri-o
-        state: present
-    
-    - name: Install Kubernetes components
-      apt:
-        name: "{{ item }}"
-        state: present
-        update_cache: yes
-      loop:
-        - kubelet={{ k8s_version }}
-        - kubeadm={{ k8s_version }}
-        - kubectl={{ k8s_version }}
+        filename: cri-o
 
     - name: Install CRI-O
       apt:
-        name: cri-o={{ crio_version }}
+        name: cri-o
         state: present
 
     - name: Enable and start CRI-O service
       systemd:
         name: crio
-        enabled: true
+        enabled: yes
         state: started
 
-    - name: Disable and stop kubelet service
-      systemd:
-        name: kubelet
-        enabled: false
-        state: stopped
-
-    - name: Configure CRI-O as Kubernetes runtime
-      lineinfile:
-        path: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
-        line: Environment="KUBELET_EXTRA_ARGS=--container-runtime=remote --container-runtime-endpoint=/var/run/crio/crio.sock"
+    - name: Set up Kubernetes repository
+      apt_repository:
+        repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
         state: present
-        create: true
+        filename: kubernetes
+        update_cache: yes
+        keyserver: keyserver.ubuntu.com
+        key_id: 6A030B21BA07F4FB
 
-    - name: Reload systemd configuration
-      systemd:
-        daemon_reload: yes
+    - name: Install Kubernetes packages
+      apt:
+        name: "{{ item }}"
+        state: present
+      with_items:
+        - kubelet
+        - kubeadm
+        - kubectl
 
-    - name: Restart kubelet service
+    - name: Enable kubelet service
       systemd:
         name: kubelet
+        enabled: yes
         state: started
+
