--- a/test3.yaml
+++ b/test3.yaml
@@ -33,11 +33,11 @@
 
     - name: Add CRI-O repository key
       apt_key:
-        url: https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_$(lsb_release -rs)/Release.key
+        url: https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/Ubuntu_$(lsb_release -rs)/Release.key
 
     - name: Add CRI-O repository
       apt_repository:
-        repo: deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_$(lsb_release -rs)/ /
+        repo: deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/Ubuntu_$(lsb_release -rs)/ /
         state: present
         filename: cri-o
 
