--- a/test3.yaml
+++ b/test3.yaml
@@ -33,7 +33,7 @@
 
     - name: Add CRI-O repository
       apt_repository:
-        repo: deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/Ubuntu_20.04/ /
+        repo: deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/ /
         state: present
         filename: cri-o
 
