--- a/test3.yaml
+++ b/test3.yaml
@@ -1,89 +1,81 @@
-- name: Install Kubernetes with CRI-O
-  hosts: all
+---
+- hosts: all
   become: yes
-
-  vars:
-    # Change the Kubernetes version to match your needs
-    OS: xUbuntu_20.04
-    VERSION: 1.26
+  become_user: root
+  gather_facts: yes
 
   tasks:
-    - name: Disable swap
-      sysctl:
-        name: vm.swappiness
-        value: 0
-        state: present
+     - name: Create CRI-O config file
+       file:
+         path: "/etc/modules-load.d/crio.conf"
+         state: "touch"
 
-    - name: Unmount swap
-      mount:
-        name: swap
-        fstype: swap
-        state: absent
+     - name: add modules in conf file
+       blockinfile:
+         path: "/etc/modules-load.d/crio.conf"
+         block: |
+            overlay
+            br_netfilter
 
-    - name: Remove swap entry from /etc/fstab
-      lineinfile:
-        path: /etc/fstab
-        regexp: '^/dev/mapper/ubuntu--vg-swap_1'
-        state: absent
+     - name: Enable sysctl params
+       file:
+         path: "/etc/sysctl.d/99-kubernetes-cri.conf"
+         state: "touch"
 
-    - name: Install CRI-O dependencies
-      apt:
-        name: "{{ item }}"
-        state: present
-      with_items:
-        - software-properties-common
-        - apt-transport-https
-        - ca-certificates
-        - curl
+     - name: add configuration
+       blockinfile:
+         path: "/etc/sysctl.d/99-kubernetes-cri.conf"
+         block: |
+                net.bridge.bridge-nf-call-iptables = 1
+                net.ipv4.ip_forward = 1
+                net.bridge.bridge-nf-call-ip6tables = 1
 
-    - name: Get Cri-o apt-key
-      apt_key: 
-        url: https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/{{ OS }}/Release.key
-        state: present
+     - name: enable overlayFS & VxLan pod communication
+       shell: |
+               sudo modprobe overlay
+               sudo modprobe br_netfilter
+     - name: Reload parameters
+       command: sudo sysctl --system
 
-    - name: Get Cri-o apt-key
-      apt_key: 
-        url: https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable:cri-o:{{ VERSION }}/{{ OS}}/Release.key
-        state: present
+     - name: disable swap
+       shell: |
+               sudo swapoff -a
+               sudo sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+     - name: enable cri-repo
+       environment:
+          OS: xUbuntu_20.04
+          VERSION: 1.23
+       shell: |
+                echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/$OS/ /" > /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
+                echo "deb http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable:/cri-o:/$VERSION/$OS/ /" > /etc/apt/sources.list.d/devel:kubic:libcontainers:stable:cri-o:$VERSION.list
 
+                curl -L https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable:cri-o:$VERSION/$OS/Release.key | apt-key add -
+                curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/$OS/Release.key | apt-key add -
+     - name: Install cri-o and cri-o tools
+       shell: |
+               sudo apt-get update
+               sudo apt-get install cri-o cri-o-runc cri-tools -y
+               sudo systemctl daemon-reload
+               sudo systemctl enable crio --now
 
-    - name: Add Cri-o stable repo
-      apt_repository:
-        repo: "deb http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/{{ OS }}/ /"
-        state: present
-        filename: cri-o-stable
+     - name: Install dependencies
+       shell: |
+               sudo apt-get update
+               sudo apt-get install -y apt-transport-https curl
+               curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+     - name: Create kubernetes repo file
+       file:
+         path: "/etc/apt/sources.list.d/kubernetes.list"
+         state: "touch"
 
-    - name: Add Cri-o stable repo
-      apt_repository:
-        repo: "deb http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable:/cri-o:/{{ VERSION }}/{{ OS }}/ /"
-        state: present
-        filename: cri-o-{{ VERSION }}
+     - name: Add K8s Source
+       blockinfile:
+         path: "/etc/apt/sources.list.d/kubernetes.list"
+         block: |
+               deb https://apt.kubernetes.io/ kubernetes-xenial main
 
-    - name: update apt
-      apt:
-        update_cache: yes
-        cache_valid_time: 3600
-
-    - name: Set up Kubernetes repository
-      apt_repository:
-        repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
-        state: present
-        filename: kubernetes
-        update_cache: yes
-        keyserver: keyserver.ubuntu.com
-
-    - name: Install Kubernetes packages
-      apt:
-        name: "{{ item }}"
-        state: present
-      with_items:
-        - kubelet
-        - kubeadm
-        - kubectl
-
-    - name: Enable kubelet service
-      systemd:
-        name: kubelet
-        enabled: yes
-        state: started
-
+     - name: install kubernetes
+       shell: |
+               sudo apt-get update
+               sudo apt-get install -y kubelet="{{VERSION}}".1-00 kubeadm="{{VERSION}}".1-00 kubectl=1"{{VERSION}}".1-00
+               sudo apt-mark hold kubelet kubeadm kubectl
